# clr-openmanage-mcp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  update-tools-reference.yml
src/clr_openmanage_mcp/: config.py  server.py
src/openmanage_mcp_server/: __main__.py  config.py  server.py
