[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openmanage-mcp-server"
version = "1.0.0"
description = "MCP server for Dell OpenManage Enterprise"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "clearminds"}]
keywords = ["mcp", "dell", "openmanage", "ome", "server"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "httpx>=0.28.1",
    "fastmcp>=2.14.0,<3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.urls]
Repository = "https://github.com/clearminds/openmanage-mcp-server"

[project.scripts]
openmanage-mcp-server = "openmanage_mcp_server.server:main"
